# opensludge

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  ToDo.txt  autogen.sh  configure.ac  sludge.nsi
GTK_Dev_Kit/: Common.cpp  Common.h  CompilerMain.cpp  FloorMaker.glade  FloorMaker.rc  FloorMakerMain.cpp  Makefile.am  ProjectManager.glade  ProjectManager.rc  ProjectManagerMain.cpp  ProjectManagerMain.h  SludgeApplication.cpp  SludgeApplication.h  SludgeFloorMaker.cpp  SludgeFloorMaker.h  SludgeGLApplication.cpp  SludgeGLApplication.h  SludgeProjectManager.cpp  SludgeProjectManager.h  SludgeSpriteBankEditor.cpp  SludgeSpriteBankEditor.h  SludgeTranslationEditor.cpp  SludgeTranslationEditor.h  SludgeZBufferMaker.cpp  SludgeZBufferMaker.h  SpriteBankEditor.glade  SpriteBankEditor.rc  SpriteBankEditorMain.cpp  TranslationEditor.glade  TranslationEditor.rc  TranslationEditorMain.cpp  TranslationEditorMain.h  ZBufferMaker.glade  ZBufferMaker.rc  ZBufferMakerMain.cpp  make_resources.sh
GTK_Dev_Kit/support/: Makefile.am  sludge-floormaker.desktop  sludge-projectmanager.desktop  sludge-spritebankeditor.desktop  sludge-translationeditor.desktop  sludge-zbuffermaker.desktop
doc/: Credits.html  Credits.rtf  INSTALL_LINUX  INSTALL_LINUX_BASS  Makefile.am  SLUDGE Dev Kit Help.chw  SLUDGE Dev Kit Help.hhk  SLUDGE Dev Kit Help.hhp  SLUDGE_Dev_Kit_Help.html  SLUDGE_Help.html  Table of Contents.hhc  readme.txt  sludge_engine_suspend_pa.sh
doc/ExampleProjects/VerbCoin/: VerbCoin.slp  demofont.duc  german.tra  init.slu  nicupfontsmall.duc
doc/ExampleProjects/VerbCoin/ego/: alien.duc  ego.slu
doc/ExampleProjects/VerbCoin/iface/: arrow_icons.slu  coin_interface.slu  invback.tga  inventory.slu  keyboard.slu  mouse.duc  mushroom.duc  stop_and_go.slu  talk.slu  verbcoin.tga  verbs.slu
doc/ExampleProjects/VerbCoin/inside/: music.mod  music.xm  room.flo  room.slu  room.tga  room.zbu
doc/ExampleProjects/VerbCoin/outside/: duck.duc  music.mod  music.xm  room.flo  room.slu  room.tga  room.zbu
doc/ExampleProjects/Welcome/: Welcome.slp  image.tga  script.slu
doc/SLUDGE Dev Kit.help/Contents/Resources/: About_the_SLUDGE_Floor_Maker.html  About_the_SLUDGE_Sprite_Bank_Editor.html  File_Handling.html  Object_Types_as_Characters.html  Object_Types_as_Screen_Regions.html  The_World's_Easiest_Load_Save_Mechanism.html  Treating_Variables_as_Strings.html  Unfreezable_Functions.html  Variable_Operations.html  dequeue.html  getFramesPerSecond.html  getOverObject.html  (+22 more)
doc/SLUDGEDevKitHelp/: About_the_SLUDGE_Compiler.html  About_the_SLUDGE_Floor_Maker.html  About_the_SLUDGE_Project_Manager.html  About_the_SLUDGE_Sprite_Bank_Editor.html  About_the_SLUDGE_Translation_Editor.html  About_the_SLUDGE_Z-Buffer_Maker.html  Alphabetical_List_of_Built-in_Functions.html  Built-in_Constants.html  Copyright.html  Download_Free_SLUDGE_Examples.html  File_Formats_Used_by_SLUDGE.html  File_Handling.html  Functions_(subs).html  HtmlMenu.html  Introduction_to_SLUDGE_Concepts.html  Loops_and_Conditionals.html  Member_Variables_and_Member_Functions.html  Multiple_Languages_in_a_Single_Game.html  Object_Types_and_Events.html  Object_Types_as_Characters.html  Object_Types_as_Screen_Regions.html  Overview__Creating_a_Game.html  Passing_Functions_as_Variables.html  Problems_with_+=,_-=,__=,__=_and_%=_in_SLUDGE.html  Problems_with_compound_operators_in_SLUDGE.html  Project_Manager__Files_in_this_project_Section.html  Project_Manager__Menus.html  Project_Manager__Preferences_Dialog.html  Project_Manager__Project_Settings_Dialog.html  Project_Manager__Project_management_Section.html  Project_Manager__Project_properties_Dialog.html  Project_Manager__Project_settings_Section.html  Reusing_Code_for_or_from_Events.html  SLUDGE Dev Kit Help.html  SLUDGEDevKitHelp.helpindex  SLUDGE_Language_Reference_Manual.html  Scaling_Characters.html  Scrolling_Scenes.html  Setting_Default_Events.html  Sludge Dev Kit Help.helpindex  (+172 more)
doc/SLUDGELinuxHelp/: Compiling_SLUDGE_on_Ubuntu.html  SLUDGE_Linux_Help.html  Syntax_highlighting_for_gedit.html  Using_the_SLUDGE_Dev_Kit_on_Linux.html  Using_the_SLUDGE_Engine_on_Linux.html
doc/Sludge Dev Kit Help/: About_the_SLUDGE_Compiler.html  About_the_SLUDGE_Project_Manager.html  About_the_SLUDGE_Z-Buffer_Maker.html  Alphabetical_List_of_Built-in_Functions.html  Download_Free_SLUDGE_Examples.html  File_Formats_Used_by_SLUDGE.html  File_Handling.html  Index.hhk  Introduction_to_SLUDGE_Concepts.html  Loops_and_Conditionals.html  Multiple_Languages_in_a_Single_Game.html  Passing_Functions_as_Variables.html  Project_Manager__Menus.html  Project_Manager___quot;Files_in_this_project_quot;_Section.html  Project_Manager___quot;Project_management_quot;_Section.html  Project_Manager___quot;Project_properties_quot;_Dialog.html  Project_Manager___quot;Project_settings_quot;_Section.html  Project_Manager___quot;Registration_info_quot;_Dialog.html  SLUDGE Dev Kit Help.html  Scrolling_Scenes.html  Setting_Default_Events.html  Sludge Dev Kit Help.helpindex  Table of Contents.hhc  The_Background_Image.html  The_Multi-Purpose_Stack___Array___Queue_Type.html  The_Programs.html  Treating_Variables_as_Booleans.html  Variables.html  Welcome_to_SLUDGE!.html  addCharacter.html  addScreenRegion.html  addStatus.html  aimCamera.html  alignStatus.html  antialiasing.html  bodgeFilenames.html  cacheSound.html  callEvent.html  cancelSub.html  clearStatus.html  (+70 more)
source/Engine/: ALLFILES.H  BACKDROP.CPP  BACKDROP.H  BUILTIN.H  COLOURS.H  CSLUDGE.H  CURSORS.CPP  CURSORS.H  FILESET.CPP  FILESET.H  FONTTEXT.CPP  FONTTEXT.H  FREEZE.CPP  FREEZE.H  Graphics.cpp  Graphics.h  LOADSAVE.CPP  LOADSAVE.H  Language.cpp  Language.h  MOREIO.CPP  MOREIO.H  Makefile.am  NEWFATAL.CPP  NEWFATAL.H  OBJTYPES.CPP  OBJTYPES.H  PEOPLE.H  REGION.CPP  REGION.H  SLUDGER.CPP  SLUDGER.H  SPRBANKS.CPP  SPRBANKS.H  SPRITES.CPP  STATUSBA.CPP  STATUSBA.H  STRINGY.CPP  Sprites_AA.CPP  Sprites_AA.h  (+117 more)
source/Engine/eglport/: eglport.cpp  eglport.h
source/Engine/libvorbis/: vorbis_os.h
source/Engine/libwebm/: mkvparser.cpp  mkvreader.cpp
source/Engine/resources/: CROSS.CUR
(+530 files in other folders)
