if COND_ENGINE
  MAYBE_SOURCE = source
endif

if COND_DEVKIT
  MAYBE_GTK_DEV_KIT = GTK_Dev_Kit
endif

if COND_DOC
  MAYBE_DOC = doc
endif

SUBDIRS = $(MAYBE_SOURCE) $(MAYBE_GTK_DEV_KIT) $(MAYBE_DOC)
dist_doc_DATA = AUTHORS README INSTALL
EXTRA_DIST = \
	GPL \
	debian/devkit/gtksourceview-2.0/language-specs/sludge.lang \
	debian/changelog \
	debian/compat \
	debian/control \
	debian/copyright \
	debian/devkit/applications/sludge-floormaker.desktop \
	debian/devkit/applications/sludge-projectmanager.desktop \
	debian/devkit/applications/sludge-spritebankeditor.desktop \
	debian/devkit/applications/sludge-translationeditor.desktop \
	debian/devkit/applications/sludge-zbuffermaker.desktop \
	debian/devkit/gtksourceview-2.0/language-specs/sludge.lang \
	debian/devkit/icons/hicolor/128x128/apps/sludge-floormaker.png \
	debian/devkit/icons/hicolor/128x128/apps/sludge-projectmanager.png \
	debian/devkit/icons/hicolor/128x128/apps/sludge-spritebankeditor.png \
	debian/devkit/icons/hicolor/128x128/apps/sludge-translationeditor.png \
	debian/devkit/icons/hicolor/128x128/apps/sludge-zbuffermaker.png \
	debian/devkit/icons/hicolor/128x128/mimetypes/application-x-sludge-compressedimage.png \
	debian/devkit/icons/hicolor/128x128/mimetypes/application-x-sludge-spritebank.png \
	debian/devkit/icons/hicolor/128x128/mimetypes/application-x-sludge-zbuffer.png \
	debian/devkit/icons/hicolor/128x128/mimetypes/text-x-sludge-floor.png \
	debian/devkit/icons/hicolor/128x128/mimetypes/text-x-sludge-project.png \
	debian/devkit/icons/hicolor/128x128/mimetypes/text-x-sludge-script.png \
	debian/devkit/icons/hicolor/128x128/mimetypes/text-x-sludge-translation.png \
	debian/devkit/icons/hicolor/16x16/apps/sludge-floormaker.png \
	debian/devkit/icons/hicolor/16x16/apps/sludge-projectmanager.png \
	debian/devkit/icons/hicolor/16x16/apps/sludge-spritebankeditor.png \
	debian/devkit/icons/hicolor/16x16/apps/sludge-translationeditor.png \
	debian/devkit/icons/hicolor/16x16/apps/sludge-zbuffermaker.png \
	debian/devkit/icons/hicolor/16x16/mimetypes/application-x-sludge-compressedimage.png \
	debian/devkit/icons/hicolor/16x16/mimetypes/application-x-sludge-spritebank.png \
	debian/devkit/icons/hicolor/16x16/mimetypes/application-x-sludge-zbuffer.png \
	debian/devkit/icons/hicolor/16x16/mimetypes/text-x-sludge-floor.png \
	debian/devkit/icons/hicolor/16x16/mimetypes/text-x-sludge-project.png \
	debian/devkit/icons/hicolor/16x16/mimetypes/text-x-sludge-script.png \
	debian/devkit/icons/hicolor/16x16/mimetypes/text-x-sludge-translation.png \
	debian/devkit/icons/hicolor/32x32/apps/sludge-floormaker.png \
	debian/devkit/icons/hicolor/32x32/apps/sludge-projectmanager.png \
	debian/devkit/icons/hicolor/32x32/apps/sludge-spritebankeditor.png \
	debian/devkit/icons/hicolor/32x32/apps/sludge-translationeditor.png \
	debian/devkit/icons/hicolor/32x32/apps/sludge-zbuffermaker.png \
	debian/devkit/icons/hicolor/32x32/mimetypes/application-x-sludge-compressedimage.png \
	debian/devkit/icons/hicolor/32x32/mimetypes/application-x-sludge-spritebank.png \
	debian/devkit/icons/hicolor/32x32/mimetypes/application-x-sludge-zbuffer.png \
	debian/devkit/icons/hicolor/32x32/mimetypes/text-x-sludge-floor.png \
	debian/devkit/icons/hicolor/32x32/mimetypes/text-x-sludge-project.png \
	debian/devkit/icons/hicolor/32x32/mimetypes/text-x-sludge-script.png \
	debian/devkit/icons/hicolor/32x32/mimetypes/text-x-sludge-translation.png \
	debian/devkit/icons/hicolor/48x48/apps/sludge-floormaker.png \
	debian/devkit/icons/hicolor/48x48/apps/sludge-projectmanager.png \
	debian/devkit/icons/hicolor/48x48/apps/sludge-spritebankeditor.png \
	debian/devkit/icons/hicolor/48x48/apps/sludge-translationeditor.png \
	debian/devkit/icons/hicolor/48x48/apps/sludge-zbuffermaker.png \
	debian/devkit/icons/hicolor/48x48/mimetypes/application-x-sludge-compressedimage.png \
	debian/devkit/icons/hicolor/48x48/mimetypes/application-x-sludge-spritebank.png \
	debian/devkit/icons/hicolor/48x48/mimetypes/application-x-sludge-zbuffer.png \
	debian/devkit/icons/hicolor/48x48/mimetypes/text-x-sludge-floor.png \
	debian/devkit/icons/hicolor/48x48/mimetypes/text-x-sludge-project.png \
	debian/devkit/icons/hicolor/48x48/mimetypes/text-x-sludge-script.png \
	debian/devkit/icons/hicolor/48x48/mimetypes/text-x-sludge-translation.png \
	debian/devkit/pixmaps/sludge/16x16/floormaker.xpm \
	debian/devkit/pixmaps/sludge/16x16/projectmanager.xpm \
	debian/devkit/pixmaps/sludge/16x16/spritebankeditor.xpm \
	debian/devkit/pixmaps/sludge/16x16/translationeditor.xpm \
	debian/devkit/pixmaps/sludge/16x16/zbuffermaker.xpm \
	debian/devkit/pixmaps/sludge/32x32/floormaker.xpm \
	debian/devkit/pixmaps/sludge/32x32/projectmanager.xpm \
	debian/devkit/pixmaps/sludge/32x32/spritebankeditor.xpm \
	debian/devkit/pixmaps/sludge/32x32/translationeditor.xpm \
	debian/devkit/pixmaps/sludge/32x32/zbuffermaker.xpm \
	debian/engine/applications/sludge-engine.desktop \
	debian/engine/icons/hicolor/128x128/apps/sludge-engine.png \
	debian/engine/icons/hicolor/128x128/mimetypes/application-x-sludge-game.png \
	debian/engine/icons/hicolor/16x16/apps/sludge-engine.png \
	debian/engine/icons/hicolor/16x16/mimetypes/application-x-sludge-game.png \
	debian/engine/icons/hicolor/32x32/apps/sludge-engine.png \
	debian/engine/icons/hicolor/32x32/mimetypes/application-x-sludge-game.png \
	debian/engine/icons/hicolor/48x48/apps/sludge-engine.png \
	debian/engine/icons/hicolor/48x48/mimetypes/application-x-sludge-game.png \
	debian/rules \
	debian/sludge-devkit.1.xml \
	debian/sludge-devkit.install \
	debian/sludge-devkit.manpages \
	debian/sludge-devkit.menu \
	debian/sludge-devkit.sharedmimeinfo \
	debian/sludge-doc.doc-base \
	debian/sludge-doc.install \
	debian/sludge-engine.1.xml \
	debian/sludge-engine.install \
	debian/sludge-engine.manpages \
	debian/sludge-engine.sharedmimeinfo
