bin_PROGRAMS = sludge-floormaker sludge-zbuffermaker sludge-spritebankeditor sludge-projectmanager sludge-compiler

sludge_floormaker_SOURCES = \
	FloorMakerMain.cpp SludgeFloorMaker.cpp SludgeFloorMaker.h \
	SludgeGLApplication.cpp SludgeGLApplication.h \
	SludgeApplication.cpp SludgeApplication.h \
	Common.cpp Common.h ../source/ProjectManager/interface.h \
	../source/FloorMaker/floormaker.cpp ../source/FloorMaker/floormaker.h \
	../source/SpriteBankEditor/sprites.cpp ../source/SpriteBankEditor/sprites.h \
	../source/ProjectManager/moreio.cpp ../source/ProjectManager/moreio.h \
	../source/CommonCode/tga.cpp ../source/CommonCode/tga.h

sludge_zbuffermaker_SOURCES = \
	ZBufferMakerMain.cpp SludgeZBufferMaker.cpp SludgeZBufferMaker.h \
	SludgeGLApplication.cpp SludgeGLApplication.h \
	SludgeApplication.cpp SludgeApplication.h \
	Common.cpp Common.h ../source/ProjectManager/interface.h \
	../source/ZBufferMaker/zbuffer.cpp ../source/ZBufferMaker/zbuffer.h \
	../source/SpriteBankEditor/sprites.cpp ../source/SpriteBankEditor/sprites.h \
	../source/ProjectManager/moreio.cpp ../source/ProjectManager/moreio.h \
	../source/CommonCode/tga.cpp ../source/CommonCode/tga.h

sludge_spritebankeditor_SOURCES = \
	SpriteBankEditorMain.cpp SludgeSpriteBankEditor.cpp SludgeSpriteBankEditor.h \
	SludgeGLApplication.cpp SludgeGLApplication.h \
	SludgeApplication.cpp SludgeApplication.h \
	Common.cpp Common.h ../source/ProjectManager/interface.h \
	../source/SpriteBankEditor/sprites.cpp ../source/SpriteBankEditor/sprites.h \
	../source/ProjectManager/moreio.cpp ../source/ProjectManager/moreio.h \
	../source/CommonCode/tga.cpp ../source/CommonCode/tga.h

sludge_projectmanager_SOURCES = \
	ProjectManagerMain.cpp ProjectManagerMain.h \
	SludgeProjectManager.cpp SludgeProjectManager.h \
	SludgeApplication.cpp SludgeApplication.h \
	Common.cpp Common.h ../source/ProjectManager/interface.h \
	../source/ProjectManager/project.cpp ../source/ProjectManager/project.hpp \
	../source/ProjectManager/settings.cpp ../source/ProjectManager/settings.h \
	../source/ProjectManager/moreio.cpp ../source/ProjectManager/moreio.h \
	../source/ProjectManager/messbox.cpp ../source/ProjectManager/messbox.h \
	../source/CommonCode/tga.cpp ../source/CommonCode/tga.h \
	../source/SpriteBankEditor/splitter.cpp ../source/Translator/splitter.hpp \
	../source/Compiler/compiler.cpp ../source/Compiler/compiler.hpp \
	../source/Compiler/compilerinfo.cpp ../source/Compiler/compilerinfo.h \
	../source/Compiler/allknown.cpp ../source/Compiler/allknown.h \
	../source/Compiler/checkused.cpp ../source/Compiler/checkused.h \
	../source/Compiler/dumpfiles.cpp ../source/Compiler/dumpfiles.h \
	../source/Compiler/floor.cpp ../source/Compiler/floor.h \
	../source/Compiler/hsi.cpp ../source/Compiler/hsi.h \
	../source/Compiler/linker.cpp ../source/Compiler/linker.h \
	../source/Compiler/objtype.cpp ../source/Compiler/objtype.h \
	../source/Compiler/preproc.cpp ../source/Compiler/preproc.h \
	../source/Compiler/realproc.cpp ../source/Compiler/realproc.h \
	../source/Compiler/sludge_functions.cpp ../source/Compiler/sludge_functions.h \
	../source/Compiler/tokens.cpp ../source/Compiler/tokens.h \
	../source/Compiler/translation.cpp ../source/Compiler/translation.h \
	../source/Compiler/csludge.h ../source/Compiler/typedef.h


sludge_compiler_SOURCES = \
	CompilerMain.cpp \
	Common.cpp Common.h ../source/ProjectManager/interface.h \
	../source/ProjectManager/project.cpp ../source/ProjectManager/project.hpp \
	../source/ProjectManager/settings.cpp ../source/ProjectManager/settings.h \
	../source/ProjectManager/moreio.cpp ../source/ProjectManager/moreio.h \
	../source/ProjectManager/messbox.cpp ../source/ProjectManager/messbox.h \
	../source/CommonCode/tga.cpp ../source/CommonCode/tga.h \
	../source/SpriteBankEditor/splitter.cpp ../source/Translator/splitter.hpp \
	../source/Compiler/compiler.cpp ../source/Compiler/compiler.hpp \
	../source/Compiler/compilerinfo.cpp ../source/Compiler/compilerinfo.h \
	../source/Compiler/allknown.cpp ../source/Compiler/allknown.h \
	../source/Compiler/checkused.cpp ../source/Compiler/checkused.h \
	../source/Compiler/dumpfiles.cpp ../source/Compiler/dumpfiles.h \
	../source/Compiler/floor.cpp ../source/Compiler/floor.h \
	../source/Compiler/hsi.cpp ../source/Compiler/hsi.h \
	../source/Compiler/linker.cpp ../source/Compiler/linker.h \
	../source/Compiler/objtype.cpp ../source/Compiler/objtype.h \
	../source/Compiler/preproc.cpp ../source/Compiler/preproc.h \
	../source/Compiler/realproc.cpp ../source/Compiler/realproc.h \
	../source/Compiler/sludge_functions.cpp ../source/Compiler/sludge_functions.h \
	../source/Compiler/tokens.cpp ../source/Compiler/tokens.h \
	../source/Compiler/translation.cpp ../source/Compiler/translation.h \
	../source/Compiler/csludge.h ../source/Compiler/typedef.h


dist_pkgdata_DATA = \
	FloorMaker.glade ZBufferMaker.glade \
	SpriteBankEditor.glade ProjectManager.glade \
	../images/floormodeicon1.png \
	../images/floormodeicon2.png \
	../images/floormodeicon3.png \
	../images/floormodeicon4.png \
	../images/floormodeicon5.png \
	../images/floorIcon/floorIcon_16x16x32.png ../images/floorIcon/floorIcon_32x32x32.png \
	../images/floorIcon/floorIcon_128x128x32.png ../images/floorIcon/floorIcon_256x256x32.png \
	../images/zIcon/zIcon_16x16x32.png ../images/zIcon/zIcon_32x32x32.png \
	../images/zIcon/zIcon_128x128x32.png ../images/zIcon/zIcon_256x256x32.png \
	../images/spriteIcon/spriteIcon_16x16x32.png ../images/spriteIcon/spriteIcon_32x32x32.png \
	../images/spriteIcon/spriteIcon_128x128x32.png ../images/spriteIcon/spriteIcon_256x256x32.png \
	../images/ProjIcon/ProjIcon_16x16x32.png ../images/ProjIcon/ProjIcon_32x32x32.png \
	../images/ProjIcon/ProjIcon_128x128x32.png ../images/ProjIcon/ProjIcon_256x256x32.png \
	../images/compiler/compiler_16x16x32.png ../images/gameIcon/gameIcon_16x16x32.png

EXTRA_DIST = \
	make_resources.sh \
	FloorMaker.rc ZBufferMaker.rc SpriteBankEditor.rc ProjectManager.rc \
	../images/floorIcon/floorIcon_32x32x32.ico ../images/zIcon/zIcon_32x32x32.ico \
	../images/spriteIcon/spriteIcon_32x32x32.ico ../images/ProjIcon/ProjIcon_32x32x32.ico

AM_CPPFLAGS = -I$(top_srcdir)/source/CommonCode -I$(top_srcdir)/source/Compiler -I$(top_srcdir)/source/FloorMaker -I$(top_srcdir)/source/SpriteBankEditor -I$(top_srcdir)/source/ProjectManager -I$(top_srcdir)/source/Translator -I$(top_srcdir)/source/ZBufferMaker @GTK_CFLAGS@ @LIBPNG_CFLAGS@

if COND_WIN32
AM_CPPFLAGS += \
        -mms-bitfields  \
	-DDATADIR='"resources/"'

AM_LDFLAGS = \
         -Wl,-subsystem,windows

sludge_floormaker_LDADD = FloorMakerResources.o @GTK_LIBS@ @LIBPNG_LIBS@
sludge_zbuffermaker_LDADD = ZBufferMakerResources.o @GTK_LIBS@ @LIBPNG_LIBS@
sludge_spritebankeditor_LDADD = SpriteBankEditorResources.o @GTK_LIBS@ @LIBPNG_LIBS@
sludge_projectmanager_LDADD = ProjectManagerResources.o @GTK_LIBS@ @LIBPNG_LIBS@
else
AM_CPPFLAGS += \
	-DDATADIR='"$(pkgdatadir)/"'

sludge_floormaker_LDADD = @GTK_LIBS@ @LIBPNG_LIBS@
sludge_zbuffermaker_LDADD = @GTK_LIBS@ @LIBPNG_LIBS@
sludge_spritebankeditor_LDADD = @GTK_LIBS@ @LIBPNG_LIBS@
sludge_projectmanager_LDADD = @GTK_LIBS@ @LIBPNG_LIBS@
endif

LDADD = @GTK_LIBS@ @LIBPNG_LIBS@
