bin_PROGRAMS = sludge-floormaker sludge-zbuffermaker sludge-spritebankeditor sludge-translationeditor sludge-projectmanager sludge-compiler

sludge_floormaker_SOURCES = \
	FloorMakerMain.cpp SludgeFloorMaker.cpp SludgeFloorMaker.h \
	SludgeGLApplication.cpp SludgeGLApplication.h \
	SludgeApplication.cpp SludgeApplication.h \
	Common.cpp Common.h ../source/DevKit/Common/interface.h \
	../source/DevKit/GraphicalTools/floormaker.cpp ../source/DevKit/GraphicalTools/floormaker.h \
	../source/DevKit/GraphicalTools/sprites.cpp ../source/DevKit/GraphicalTools/sprites.h \
	../source/DevKit/Common/moreio.cpp ../source/DevKit/Common/moreio.h \
	../source/DevKit/Common/helpers.cpp ../source/DevKit/Common/helpers.h \
	../source/CommonCode/tga.cpp ../source/CommonCode/tga.h

sludge_zbuffermaker_SOURCES = \
	ZBufferMakerMain.cpp SludgeZBufferMaker.cpp SludgeZBufferMaker.h \
	SludgeGLApplication.cpp SludgeGLApplication.h \
	SludgeApplication.cpp SludgeApplication.h \
	Common.cpp Common.h ../source/DevKit/Common/interface.h \
	../source/DevKit/GraphicalTools/zbuffer.cpp ../source/DevKit/GraphicalTools/zbuffer.h \
	../source/DevKit/GraphicalTools/sprites.cpp ../source/DevKit/GraphicalTools/sprites.h \
	../source/DevKit/Common/moreio.cpp ../source/DevKit/Common/moreio.h \
	../source/DevKit/Common/helpers.cpp ../source/DevKit/Common/helpers.h \
	../source/CommonCode/tga.cpp ../source/CommonCode/tga.h

sludge_spritebankeditor_SOURCES = \
	SpriteBankEditorMain.cpp SludgeSpriteBankEditor.cpp SludgeSpriteBankEditor.h \
	SludgeGLApplication.cpp SludgeGLApplication.h \
	SludgeApplication.cpp SludgeApplication.h \
	Common.cpp Common.h ../source/DevKit/Common/interface.h \
	../source/DevKit/GraphicalTools/sprites.cpp ../source/DevKit/GraphicalTools/sprites.h \
	../source/DevKit/Common/moreio.cpp ../source/DevKit/Common/moreio.h \
	../source/DevKit/Common/helpers.cpp ../source/DevKit/Common/helpers.h \
	../source/CommonCode/tga.cpp ../source/CommonCode/tga.h

sludge_translationeditor_SOURCES = \
	TranslationEditorMain.cpp TranslationEditorMain.h \
	SludgeTranslationEditor.cpp SludgeTranslationEditor.h \
	SludgeGLApplication.cpp SludgeGLApplication.h \
	SludgeApplication.cpp SludgeApplication.h \
	Common.cpp Common.h ../source/DevKit/Common/interface.h \
	../source/DevKit/TranslationEditor/translator.cpp ../source/DevKit/TranslationEditor/translator.h \
	../source/DevKit/ProjectManager/settings.cpp ../source/DevKit/ProjectManager/settings.h \
	../source/DevKit/Common/moreio.cpp ../source/DevKit/Common/moreio.h \
	../source/DevKit/Common/helpers.cpp ../source/DevKit/Common/helpers.h \
	../source/DevKit/Common/splitter.cpp ../source/DevKit/Common/splitter.hpp

sludge_projectmanager_SOURCES = \
	ProjectManagerMain.cpp ProjectManagerMain.h \
	SludgeProjectManager.cpp SludgeProjectManager.h \
	SludgeApplication.cpp SludgeApplication.h \
	Common.cpp Common.h ../source/DevKit/Common/interface.h \
	../source/DevKit/ProjectManager/project.cpp ../source/DevKit/ProjectManager/project.hpp \
	../source/DevKit/ProjectManager/settings.cpp ../source/DevKit/ProjectManager/settings.h \
	../source/DevKit/ProjectManager/messbox.cpp ../source/DevKit/ProjectManager/messbox.h \
	../source/DevKit/Compiler/compiler.cpp ../source/DevKit/Compiler/compiler.hpp \
	../source/DevKit/Compiler/compilerinfo.cpp ../source/DevKit/Compiler/compilerinfo.h \
	../source/DevKit/Compiler/allknown.cpp ../source/DevKit/Compiler/allknown.h \
	../source/DevKit/Compiler/checkused.cpp ../source/DevKit/Compiler/checkused.h \
	../source/DevKit/Compiler/dumpfiles.cpp ../source/DevKit/Compiler/dumpfiles.h \
	../source/DevKit/Compiler/floor.cpp ../source/DevKit/Compiler/floor.h \
	../source/DevKit/Compiler/hsi.cpp ../source/DevKit/Compiler/hsi.h \
	../source/DevKit/Compiler/linker.cpp ../source/DevKit/Compiler/linker.h \
	../source/DevKit/Compiler/objtype.cpp ../source/DevKit/Compiler/objtype.h \
	../source/DevKit/Compiler/preproc.cpp ../source/DevKit/Compiler/preproc.h \
	../source/DevKit/Compiler/realproc.cpp ../source/DevKit/Compiler/realproc.h \
	../source/DevKit/Compiler/sludge_functions.cpp ../source/DevKit/Compiler/sludge_functions.h \
	../source/DevKit/Compiler/tokens.cpp ../source/DevKit/Compiler/tokens.h \
	../source/DevKit/Compiler/translation.cpp ../source/DevKit/Compiler/translation.h \
	../source/DevKit/Compiler/csludge.h ../source/DevKit/Compiler/typedef.h \
	../source/DevKit/Common/moreio.cpp ../source/DevKit/Common/moreio.h \
	../source/DevKit/Common/helpers.cpp ../source/DevKit/Common/helpers.h \
	../source/DevKit/Common/splitter.cpp ../source/DevKit/Common/splitter.hpp \
	../source/CommonCode/tga.cpp ../source/CommonCode/tga.h

sludge_compiler_SOURCES = \
	CompilerMain.cpp \
	Common.cpp Common.h ../source/DevKit/Common/interface.h \
	../source/DevKit/ProjectManager/project.cpp ../source/DevKit/ProjectManager/project.hpp \
	../source/DevKit/ProjectManager/settings.cpp ../source/DevKit/ProjectManager/settings.h \
	../source/DevKit/ProjectManager/messbox.cpp ../source/DevKit/ProjectManager/messbox.h \
	../source/DevKit/Compiler/compiler.cpp ../source/DevKit/Compiler/compiler.hpp \
	../source/DevKit/Compiler/compilerinfo.cpp ../source/DevKit/Compiler/compilerinfo.h \
	../source/DevKit/Compiler/allknown.cpp ../source/DevKit/Compiler/allknown.h \
	../source/DevKit/Compiler/checkused.cpp ../source/DevKit/Compiler/checkused.h \
	../source/DevKit/Compiler/dumpfiles.cpp ../source/DevKit/Compiler/dumpfiles.h \
	../source/DevKit/Compiler/floor.cpp ../source/DevKit/Compiler/floor.h \
	../source/DevKit/Compiler/hsi.cpp ../source/DevKit/Compiler/hsi.h \
	../source/DevKit/Compiler/linker.cpp ../source/DevKit/Compiler/linker.h \
	../source/DevKit/Compiler/objtype.cpp ../source/DevKit/Compiler/objtype.h \
	../source/DevKit/Compiler/preproc.cpp ../source/DevKit/Compiler/preproc.h \
	../source/DevKit/Compiler/realproc.cpp ../source/DevKit/Compiler/realproc.h \
	../source/DevKit/Compiler/sludge_functions.cpp ../source/DevKit/Compiler/sludge_functions.h \
	../source/DevKit/Compiler/tokens.cpp ../source/DevKit/Compiler/tokens.h \
	../source/DevKit/Compiler/translation.cpp ../source/DevKit/Compiler/translation.h \
	../source/DevKit/Compiler/csludge.h ../source/DevKit/Compiler/typedef.h \
	../source/DevKit/Common/moreio.cpp ../source/DevKit/Common/moreio.h \
	../source/DevKit/Common/helpers.cpp ../source/DevKit/Common/helpers.h \
	../source/DevKit/Common/splitter.cpp ../source/DevKit/Common/splitter.hpp \
	../source/CommonCode/tga.cpp ../source/CommonCode/tga.h

dist_pkgdata_DATA = \
	FloorMaker.glade ZBufferMaker.glade \
	SpriteBankEditor.glade ProjectManager.glade \
	TranslationEditor.glade \
	../images/floormodeicon1.png \
	../images/floormodeicon2.png \
	../images/floormodeicon3.png \
	../images/floormodeicon4.png \
	../images/floormodeicon5.png \
	../images/flags/flags_16x16x32.png ../images/flags/flags_32x32x32.png \
	../images/flags/flags_128x128x32.png ../images/flags/flags_256x256x32.png \
	../images/floorIcon/floorIcon_16x16x32.png ../images/floorIcon/floorIcon_32x32x32.png \
	../images/floorIcon/floorIcon_128x128x32.png ../images/floorIcon/floorIcon_256x256x32.png \
	../images/zIcon/zIcon_16x16x32.png ../images/zIcon/zIcon_32x32x32.png \
	../images/zIcon/zIcon_128x128x32.png ../images/zIcon/zIcon_256x256x32.png \
	../images/spriteIcon/spriteIcon_16x16x32.png ../images/spriteIcon/spriteIcon_32x32x32.png \
	../images/spriteIcon/spriteIcon_128x128x32.png ../images/spriteIcon/spriteIcon_256x256x32.png \
	../images/ProjIcon/ProjIcon_16x16x32.png ../images/ProjIcon/ProjIcon_32x32x32.png \
	../images/ProjIcon/ProjIcon_128x128x32.png ../images/ProjIcon/ProjIcon_256x256x32.png \
	../images/compiler/compiler_16x16x32.png ../images/gameIcon/gameIcon_16x16x32.png

EXTRA_DIST = \
	make_resources.sh \
	FloorMaker.rc ZBufferMaker.rc SpriteBankEditor.rc TranslationEditor.rc ProjectManager.rc \
	../images/flags/flags.ico \
	../images/floorIcon/floorIcon.ico ../images/zIcon/zIcon.ico \
	../images/spriteIcon/spriteIcon.ico ../images/ProjIcon/ProjIcon.ico

AM_CPPFLAGS = -I$(top_srcdir)/source/CommonCode -I$(top_srcdir)/source/DevKit/Common -I$(top_srcdir)/source/DevKit/Compiler -I$(top_srcdir)/source/DevKit/ProjectManager -I$(top_srcdir)/source/DevKit/GraphicalTools -I$(top_srcdir)/source/DevKit/TranslationEditor @GTK_CFLAGS@ @LIBPNG_CFLAGS@

if COND_WIN32
AM_CPPFLAGS += \
	-mms-bitfields  \
	-DDATADIR='"resources/"'

AM_LDFLAGS = \
	-Wl,-subsystem,windows

sludge_floormaker_LDADD = FloorMakerResources.o @GTK_LIBS@ @LIBPNG_LIBS@
sludge_zbuffermaker_LDADD = ZBufferMakerResources.o @GTK_LIBS@ @LIBPNG_LIBS@
sludge_spritebankeditor_LDADD = SpriteBankEditorResources.o @GTK_LIBS@ @LIBPNG_LIBS@
sludge_translationeditor_LDADD = TranslationEditorResources.o @GTK_LIBS@ @LIBPNG_LIBS@
sludge_projectmanager_LDADD = ProjectManagerResources.o @GTK_LIBS@ @LIBPNG_LIBS@
else
AM_CPPFLAGS += \
	-DDATADIR='"$(pkgdatadir)/"'

sludge_floormaker_LDADD = @GTK_LIBS@ @LIBPNG_LIBS@
sludge_zbuffermaker_LDADD = @GTK_LIBS@ @LIBPNG_LIBS@
sludge_spritebankeditor_LDADD = @GTK_LIBS@ @LIBPNG_LIBS@
sludge_translationeditor_LDADD = @GTK_LIBS@ @LIBPNG_LIBS@
sludge_projectmanager_LDADD = @GTK_LIBS@ @LIBPNG_LIBS@
endif

LDADD = @GTK_LIBS@ @LIBPNG_LIBS@
